package com.progzc.adapter;

/**
 * @Description 圆钉
 * @Author zhaochao
 * @Date 2020/12/11 21:08
 * @Email zcprog@foxmail.com
 * @Version V1.0
 */
public class RoundPeg {
    private double radius;

    public RoundPeg() {}

    public RoundPeg(double radius) {
        this.radius = radius;
    }

    public double getRadius() {
        return radius;
    }
}
