package com.progzc.adapter;

/**
 * @Description 方钉
 * @Author zhaochao
 * @Date 2020/12/11 21:10
 * @Email zcprog@foxmail.com
 * @Version V1.0
 */
public class SquarePeg {
    private double width;

    public SquarePeg(double width) {
        this.width = width;
    }

    public double getWidth() {
        return width;
    }
}
